--- a/app/src/app/modules/login/login.page.html
+++ b/app/src/app/modules/login/login.page.html
@@ -37,11 +37,12 @@
         </ion-col>
 
         <ion-col size="12">
-          <ion-button type="button" class="global-btn ion-text-capitalize" color="secondary" expand="block" (click)="goToHome()">
+          <ion-button type="submit" class="global-btn ion-text-capitalize" color="secondary" expand="block">
             Iniciar sesión
           </ion-button>
 
-          <ion-button type="button" class="global-btn ion-text-capitalize ion-margin-top" color="tertiary" expand="block" (click)="goToUser()">
+          <ion-button type="button" class="global-btn ion-text-capitalize ion-margin-top" color="tertiary"
+            expand="block" (click)="goToUser()">
             Registrarse
           </ion-button>
         </ion-col>
