--- a/app/src/app/modules/song/song.page.html
+++ b/app/src/app/modules/song/song.page.html
@@ -22,36 +22,45 @@
   </ion-segment>
 
   <div [ngSwitch]="segmentValue">
-    <div *ngSwitchCase="segmentGeneral">
-      <ion-grid class="ion-padding">
-        <ion-row>
-          <ion-item class="ion-align-items-center w100" lines="none">
-            <ion-label color="tertiary" position="floating">Nombre de la canción</ion-label>
-            <ion-input type="text" formControlName="password"></ion-input>
-          </ion-item>
-          <div *ngIf="!isFieldValid('password')" class="invalid-input-message">
-            {{getFieldError('password')}}
-          </div>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <div *ngSwitchCase="segmentGeneral">
+        <ion-grid class="ion-padding">
+          <ion-row>
+            <ion-item class="ion-align-items-center w100" lines="none">
+              <ion-label color="tertiary" position="floating">Nombre de la canción</ion-label>
+              <ion-input type="text" formControlName="name"></ion-input>
+            </ion-item>
+            <div *ngIf="!isFieldValid('name')" class="invalid-input-message">
+              {{getFieldError('name')}}
+            </div>
 
-          <ion-item class="ion-align-items-center w100 ion-margin-top" lines="none">
-            <ion-label color="tertiary" position="floating">Autor</ion-label>
-            <ion-input type="text" formControlName="password"></ion-input>
-          </ion-item>
-          <div *ngIf="!isFieldValid('password')" class="invalid-input-message">
-            {{getFieldError('password')}}
-          </div>
+            <ion-item class="ion-align-items-center w100 ion-margin-top" lines="none">
+              <ion-label color="tertiary" position="floating">Autor</ion-label>
+              <ion-input type="text" formControlName="author"></ion-input>
+            </ion-item>
+            <div *ngIf="!isFieldValid('author')" class="invalid-input-message">
+              {{getFieldError('author')}}
+            </div>
 
-          <ion-item class="ion-align-items-center w100 ion-margin-top" lines="none">
-            <ion-label color="tertiary" position="floating">Cantante</ion-label>
-            <ion-input type="text" formControlName="password"></ion-input>
-          </ion-item>
-          <div *ngIf="!isFieldValid('password')" class="invalid-input-message">
-            {{getFieldError('password')}}
-          </div>
-        </ion-row>
-      </ion-grid>
+            <ion-item class="ion-align-items-center w100 ion-margin-top" lines="none">
+              <ion-label color="tertiary" position="floating">Tono</ion-label>
+              <ion-input type="text" formControlName="author"></ion-input>
+            </ion-item>
+            <div *ngIf="!isFieldValid('author')" class="invalid-input-message">
+              {{getFieldError('author')}}
+            </div>
 
-    </div>
+            <ion-item class="ion-align-items-center w100 ion-margin-top" lines="none">
+              <ion-label color="tertiary" position="floating">Cantante</ion-label>
+              <!-- <ion-input type="text" formControlName="password"></ion-input> -->
+            </ion-item>
+            <!-- <div *ngIf="!isFieldValid('password')" class="invalid-input-message">
+              {{getFieldError('password')}}
+            </div> -->
+          </ion-row>
+        </ion-grid>
+      </div>
+    </form>
 
     <div *ngSwitchCase="segmentSong">
 
@@ -136,7 +145,7 @@
           <div class="note">D</div>
           <div class="note">E</div>
         </div>
-        <ion-card >
+        <ion-card>
           <ion-item>
             Tapped: {{tap}} times
           </ion-item>
