--- a/app/src/app/modules/home/home.page.html
+++ b/app/src/app/modules/home/home.page.html
@@ -17,20 +17,20 @@
   </div>
 
   <ion-text color="tertiary">
-    <h5 class="ion-margin-start">Mis servicios</h5>
+    <h5 class="ion-margin-start">Mis listas</h5>
   </ion-text>
 
-  <ion-card *ngFor="let i of [1,1,1,1]">
+  <ion-card *ngFor="let item of items">
     <ion-item-sliding>
-      <ion-item (click)="pageService.navigateRoute('service/watch/' + i)" lines="none" class="ion-align-items-center">
+      <ion-item (click)="pageService.navigateRoute('service/watch/' + item.id)" lines="none" class="ion-align-items-center">
         <ion-label class="ion-text-wrap">
-          <p>Domingo - 19/07/2023</p>
-          <ion-label><p>Creada por: <b>Alexis</b></p></ion-label>
+          <p>{{ item?.name }} - {{ item.dateTo | date:'dd/MM/yyyy'}}</p>
+          <ion-label><p>Creada por: <b>{{ item?.user?.fullName }}</b></p></ion-label>
         </ion-label>
       </ion-item>
   
       <ion-item-options>
-        <ion-item-option (click)="pageService.navigateRoute('service/edit/' + i)" color="secondary">
+        <ion-item-option (click)="pageService.navigateRoute('service/edit/' + item.id)" color="secondary">
           <ion-icon slot="start" name="create-outline"></ion-icon>
           Editar</ion-item-option>
       </ion-item-options>
