Fix floating label items

--- a/app/src/app/modules/change-password/change-password.page.html
+++ b/app/src/app/modules/change-password/change-password.page.html
@@ -9,7 +9,7 @@
 
 <ion-content id='content' class="ion-padding">
   <form [formGroup]="form" (ngSubmit)="changePassword(form.value)">
-    <ion-item lines="none" class="w100 ion-margin-top">
+    <ion-item lines="none" class="w100 ion-margin-top fix-floating">
       <ion-label position="floating" color="tertiary">Contraseña actual</ion-label>
       <ion-input type="password" required class="form-control" formControlName="password"></ion-input>
     </ion-item>
@@ -17,7 +17,7 @@
       {{getFieldError('password')}}
     </div>
 
-    <ion-item lines="none" class="w100 ion-margin-top">
+    <ion-item lines="none" class="w100 ion-margin-top fix-floating">
       <ion-label position="floating" color="tertiary">Nueva contraseña</ion-label>
       <ion-input type="password" required class="form-control" formControlName="passwordNew"></ion-input>
     </ion-item>
@@ -25,7 +25,7 @@
       {{getFieldError('passwordNew')}}
     </div>
 
-    <ion-item lines="none" class="w100 ion-margin-top">
+    <ion-item lines="none" class="w100 ion-margin-top fix-floating">
       <ion-label position="floating" color="tertiary">Confirmar nueva contraseña</ion-label>
       <ion-input type="password" required class="form-control" formControlName="passwordNewVerify"></ion-input>
     </ion-item>
