--- a/app/src/app/modules/recover-password/recover-password.page.html
+++ b/app/src/app/modules/recover-password/recover-password.page.html
@@ -20,7 +20,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-item lines="none" class="w100 ion-margin-top">
+        <ion-item lines="none" class="w100 ion-margin-top fix-floating">
           <ion-label position="floating" color="tertiary">Correo Electrónico</ion-label>
           <ion-input type="email" required formControlName="emailAddress"></ion-input>
         </ion-item>
