--- a/app/src/app/modules/service/service.page.html
+++ b/app/src/app/modules/service/service.page.html
@@ -12,7 +12,7 @@
   <form class="ion-margin-top" [formGroup]="form" (ngSubmit)="onSubmit()">
     <ion-grid class="ion-padding" *ngIf="!isWatching">
       <ion-row>
-        <ion-item class="ion-align-items-center w100" lines="none">
+        <ion-item class="ion-align-items-center w100 fix-floating" lines="none">
           <ion-label color="tertiary" position="floating">Nombre del servicio</ion-label>
           <ion-input formControlName="name" type="text"></ion-input>
         </ion-item>
