--- a/app/src/app/modules/login/login.page.html
+++ b/app/src/app/modules/login/login.page.html
@@ -10,7 +10,7 @@
 
       <ion-row class="ion-margin-top">
         <ion-col size="12">
-          <ion-item class="w100 ion-margin-top" lines="none">
+          <ion-item class="w100 ion-margin-top fix-floating" lines="none">
             <ion-label color="tertiary" position="floating">Email</ion-label>
             <ion-input type="email" formControlName="username"></ion-input>
           </ion-item>
@@ -19,7 +19,7 @@
           </div>
         </ion-col>
         <ion-col size="12">
-          <ion-item class="ion-align-items-center w100" lines="none">
+          <ion-item class="ion-align-items-center w100 fix-floating" lines="none">
             <ion-label color="tertiary" position="floating">Contraseña</ion-label>
             <ion-icon color="tertiary" slot="end" [name]="showPassword ? 'eye-off' : 'eye'"
               (click)="showPassword = !showPassword"></ion-icon>
