Subo modal y fix scroll

--- a/app/src/app/modules/song/song.page.html
+++ b/app/src/app/modules/song/song.page.html
@@ -158,7 +158,7 @@
 
           <ng-template swiperSlide>
             <!-- <ion-chip> -->
-            <ion-button class="height-custom" fill="solid" color="primary" shape="round">
+            <ion-button (click)="openModalInstrument()" class="height-custom" fill="solid" color="primary" shape="round">
               <ion-icon color="light" slot="icon-only" name="add-circle"></ion-icon>
             </ion-button>
             <!-- </ion-chip> -->
