--- a/app/src/app/modules/song/song.page.html
+++ b/app/src/app/modules/song/song.page.html
@@ -352,8 +352,8 @@
           </div>
         </div>
 
-        <ion-button class="ion-padding-start ion-padding-end" color="secondary" expand="block" fill="solid"
-          shape="round">
+        <ion-button type="submit" class="ion-padding-start ion-padding-end" color="secondary" expand="block"
+          fill="solid" shape="round">
           Guardar
           <ion-icon slot="start" name="save"></ion-icon>
         </ion-button>
