--- a/app/src/app/modules/service/service.page.html
+++ b/app/src/app/modules/service/service.page.html
@@ -13,7 +13,7 @@
     <ion-grid class="ion-padding" *ngIf="!isWatching">
       <ion-row>
         <ion-item class="ion-align-items-center w100 fix-floating" lines="none">
-          <ion-label color="tertiary" position="floating">Nombre del servicio</ion-label>
+          <ion-label color="tertiary" position="floating">Nombre de la lista</ion-label>
           <ion-input formControlName="name" type="text"></ion-input>
         </ion-item>
         <div *ngIf="!isFieldValid('name')" class="invalid-input-message">
