--- a/app/src/app/modules/song/song.page.html
+++ b/app/src/app/modules/song/song.page.html
@@ -11,7 +11,7 @@
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <ion-segment [(ngModel)]="segmentValue" [ngModelOptions]="{standalone: true}" value="song"
       class="w100 segment-custom">
-      <ion-segment-button *ngIf="!isWatching" [value]="segmentGeneral" value="general">
+      <ion-segment-button [value]="segmentGeneral" value="general">
         <ion-label>General</ion-label>
       </ion-segment-button>
       <ion-segment-button [value]="segmentSong" value="song">
@@ -69,7 +69,7 @@
                     type="text"></ion-input>
                 </ion-item>
               </ion-col>
-              <ion-col size="3" class="ion-no-padding ion-padding-end">
+              <ion-col [size]="!isWatching ? 3 : 5" class="ion-no-padding ion-padding-end">
                 <ion-item class="ion-align-items-center w100" lines="none">
                   <ion-label position="floating">Tono</ion-label>
                   <ion-select [(ngModel)]="form.value?.singers[i].note" [ngModelOptions]="{standalone: true}"
@@ -79,7 +79,7 @@
                   </ion-select>
                 </ion-item>
               </ion-col>
-              <ion-col size="2" class="ion-no-padding ion-no-margin">
+              <ion-col size="2" *ngIf="!isWatching" class="ion-no-padding ion-no-margin">
                 <ion-button (click)="addOrRemoveSinger(i, i+1!=form.value?.singers.length)" class="height-custom-btn">
                   <ion-icon [name]="i+1==form.value?.singers.length ? 'add': 'remove'" color="light"></ion-icon>
                 </ion-button>
@@ -94,14 +94,14 @@
                     type="text"></ion-input>
                 </ion-item>
               </ion-col>
-              <ion-col size="3" class="ion-no-padding ion-padding-end">
+              <ion-col [size]="!isWatching ? 3 : 5" class="ion-no-padding ion-padding-end">
                 <ion-item class="ion-align-items-center w100" lines="none">
                   <ion-label color="tertiary" position="floating">Link</ion-label>
                   <ion-input [(ngModel)]="form.value?.links[i].link" [ngModelOptions]="{standalone: true}"
                     type="text"></ion-input>
                 </ion-item>
               </ion-col>
-              <ion-col size="2" class="ion-no-padding ion-no-margin">
+              <ion-col size="2" *ngIf="!isWatching" class="ion-no-padding ion-no-margin">
                 <ion-button (click)="addOrRemoveLink(i, i+1!=form.value?.links.length)" class="height-custom-btn">
                   <ion-icon [name]="i+1==form.value?.links.length ? 'add': 'remove'" color="light"></ion-icon>
                 </ion-button>
@@ -115,29 +115,10 @@
 
 
       <div *ngSwitchCase="segmentSong">
-
-        <ion-card class="ion-padding" *ngIf="isWatching">
-          <h4><b>Estrofa 1:</b></h4>
-          <h3>
-            Amor inexplicable, tu vida diste en la cruz <br>
-            Tuyo soy por siempre<br>
-            En tu misericordia, me diste vida, diste amor<br>
-            Tu gran amor<br>
-          </h3>
-          <h4><b>Estrofa 2:</b></h4>
-          <h3>
-            Amor inexplicable, tu vida diste en la cruz <br>
-            Tuyo soy por siempre<br>
-            En tu misericordia, me diste vida, diste amor<br>
-            Tu gran amor<br>
-          </h3>
-        </ion-card>
-
-
-        <div class="quill-editor-container" *ngIf="!isWatching">
+        <div class="quill-editor-container">
           <quill-editor class="quill-editor" format="text" placeholder="Escribe o pega la canción aquí"
-            [(ngModel)]="form?.value.lyrics" [ngModelOptions]="{standalone: true}" [modules]="config"
-            theme="snow"></quill-editor>
+            [(ngModel)]="form?.value.lyrics" [ngModelOptions]="{standalone: true}"
+            [modules]="!isWatching ? config : {toolbar: false} " theme="snow"></quill-editor>
         </div>
 
       </div>
@@ -158,7 +139,8 @@
 
           <ng-template swiperSlide>
             <!-- <ion-chip> -->
-            <ion-button (click)="openModalInstrument()" class="height-custom" fill="solid" color="primary" shape="round">
+            <ion-button (click)="openModalInstrument()" class="height-custom" fill="solid" color="primary"
+              shape="round">
               <ion-icon color="light" slot="icon-only" name="add-circle"></ion-icon>
             </ion-button>
             <!-- </ion-chip> -->
