--- a/app/src/app/modules/home/home.page.html
+++ b/app/src/app/modules/home/home.page.html
@@ -6,38 +6,44 @@
 
 <ion-content>
 
-  <div class="ion-padding-start ion-padding-end ion-margin-top">
-    <ion-row class="w100">
-      <ion-item lines="none" class="w100 border-10">
-        <ion-icon name="search" slot="start"></ion-icon>
-        <ion-input type="text" placeholder="Buscar"></ion-input>
-      </ion-item>
-    </ion-row>
-
-  </div>
-
-  <ion-text color="tertiary">
-    <h5 class="ion-margin-start">Mis listas</h5>
-  </ion-text>
-
-  <ion-card *ngFor="let item of items">
-    <ion-item-sliding>
-      <ion-item (click)="pageService.navigateRoute('service/watch/' + item.id)" lines="none" class="ion-align-items-center">
-        <ion-label class="ion-text-wrap">
-          <p>{{ item?.name }} - {{ item.dateTo | date:'dd/MM/yyyy'}}</p>
-          <ion-label><p>Creada por: <b>{{ item?.user?.fullName }}</b></p></ion-label>
-        </ion-label>
-      </ion-item>
+  <div class="margin-bottom-custom">
+    <div class="ion-padding-start ion-padding-end ion-margin-top">
+      <ion-row class="w100">
+        <ion-item lines="none" class="w100 border-10">
+          <ion-icon name="search" slot="start"></ion-icon>
+          <ion-input type="text" placeholder="Buscar"></ion-input>
+        </ion-item>
+      </ion-row>
   
-      <ion-item-options>
-        <ion-item-option (click)="pageService.navigateRoute('service/edit/' + item.id)" color="secondary">
-          <ion-icon slot="start" name="create-outline"></ion-icon>
-          Editar</ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-   
-  </ion-card>
+    </div>
+  
+    <ion-text color="tertiary">
+      <h5 class="ion-margin-start">Mis listas</h5>
+    </ion-text>
+  
+    <ion-card *ngFor="let item of items">
+      <ion-item-sliding>
+        <ion-item (click)="pageService.navigateRoute('service/watch/' + item.id)" lines="none" class="ion-align-items-center">
+          <ion-label class="ion-text-wrap">
+            <p>{{ item?.name }} - {{ item.dateTo | date:'dd/MM/yyyy'}}</p>
+            <ion-label><p>Creada por: <b>{{ item?.user?.fullName }}</b></p></ion-label>
+          </ion-label>
+        </ion-item>
+    
+        <ion-item-options>
+          <ion-item-option (click)="pageService.navigateRoute('service/edit/' + item.id)" color="secondary">
+            <ion-icon slot="start" name="create-outline"></ion-icon>
+            Editar</ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+     
+    </ion-card>
 
+    <div *ngIf="items.length == 0" class="ion-padding ion-text-center">
+      <h4>No hay listas para mostrar</h4>
+    </div>
+  
+  </div>
   <ion-fab class="ion-fab-custom" slot="fixed" vertical="bottom" horizontal="end">
     <ion-fab-button color="primary" (click)="pageService.navigateRoute('service/new/')">
       <ion-icon color="secondary" name="add"></ion-icon>
