--- a/app/src/app/modules/list-group/list-group.page.html
+++ b/app/src/app/modules/list-group/list-group.page.html
@@ -31,8 +31,8 @@
       </ion-row>
     </ion-grid>
 
-    <ion-card class="d-flex" *ngFor="let song of songs; let index = index">
-      <ion-buttons>
+    <ion-card class="d-flex" *ngFor="let song of songs">
+      <ion-buttons *ngIf="songsArray.includes(song)">
         <ion-button (click)="removeSong(song)" fill="clear" shape="round">
           <ion-icon name="trash"></ion-icon>
         </ion-button>
@@ -43,7 +43,7 @@
           <ion-label>{{ song.author }}</ion-label>
         </ion-label>
         <ion-buttons slot="end">
-          <div class="note">D</div>
+          <div class="note">{{ settings.notesObject[song.tone-1].name }}</div>
         </ion-buttons>
       </ion-item>
     </ion-card>
