--- a/app/src/app/modules/list-group/list-group.page.html
+++ b/app/src/app/modules/list-group/list-group.page.html
@@ -32,7 +32,7 @@
     </ion-grid>
 
     <ion-card class="d-flex" *ngFor="let song of songs">
-      <ion-buttons *ngIf="songsArray.includes(song) || item?.songs.includes(song)">
+      <ion-buttons *ngIf="isSelected(song)">
         <ion-button (click)="removeSong(song)" fill="clear" shape="round">
           <ion-icon name="trash"></ion-icon>
         </ion-button>
