--- a/app/src/app/modules/popover-notes/popover-notes.component.html
+++ b/app/src/app/modules/popover-notes/popover-notes.component.html
@@ -1,16 +1,7 @@
 <div class="notes">
   <ion-buttons>
     <ion-button class="note ion-text-capitalize" shape="round">
-      C<span class="minor-note">m</span>
-    </ion-button>
-    <ion-button class="note ion-text-capitalize" shape="round">
-      C<span class="numeral">7</span>
-    </ion-button>
-    <ion-button class="note ion-text-capitalize" shape="round">
-      C<span class="numeral">9</span>
-    </ion-button>
-    <ion-button class="note ion-text-capitalize" shape="round">
-      C<span class="numeral">maj7</span>
+      {{settings.notes[note-1].name}}<span class="minor-note">m</span>
     </ion-button>
   </ion-buttons>
 </div>
